<resources>
    <string name="app_name">MobileAttendance</string>
    <string name="activity_login">登陆</string>
    <string name="psw_login_title">账号密码登陆</string>
    <string name="phone_login_title">手机验证码登陆</string>
    <string name="psw_login_user_id">用户ID</string>
    <string name="psw_login_user_id_edit">请输入用户ID/手机号/邮箱</string>
    <string name="psw_login_user_psw">密码</string>
    <string name="psw_login_user_psw_edit">请输入密码</string>
    <string name="psw_login_code">验证码</string>
    <string name="psw_login_code_edit">请输入验证码</string>
    <string name="psw_login_btn">登陆</string>
    <string name="change_login_type">切换登陆方式</string>

    <string name="default_log_text">log</string>
    <string name="nav_home_title">主页</string>
    <string name="nav_punch_title">考勤</string>
    <string name="nav_punch_normal_button">正常考勤</string>
    <string name="nav_punch_outside_button">外派考勤</string>
    <string name="nav_punch_visit_button">拜访考勤</string>
    <string name="nav_user_title">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>