<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ma.mobileattendance.ui.fragment.NavHomeFragment"
        android:label="@string/nav_home_title"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_noticeListFragment"
            app:destination="@id/noticeListFragment" />
        <action
            android:id="@+id/action_nav_home_to_addAffairFragment"
            app:destination="@id/addAffairFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_punch"
        android:name="com.ma.mobileattendance.ui.fragment.NavPunchFragment"
        android:label="@string/nav_punch_title"
        tools:layout="@layout/fragment_punch" >
        <action
            android:id="@+id/action_nav_punch_to_normalAttendanceFragment"
            app:destination="@id/normalAttendanceFragment" />
        <action
            android:id="@+id/action_nav_punch_to_workOutsidePunchFragment"
            app:destination="@id/workOutsidePunchFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_user"
        android:name="com.ma.mobileattendance.ui.fragment.NavUserFragment"
        android:label="@string/nav_user_title"
        tools:layout="@layout/fragment_user" />
    <fragment
        android:id="@+id/normalAttendanceFragment"
        android:name="com.ma.mobileattendance.ui.fragment.NormalAttendanceFragment"
        android:label="@string/nav_punch_normal"
        tools:layout="@layout/fragment_normal_attendance">
        <action
            android:id="@+id/action_normalAttendanceFragment_to_punchMapFragment"
            app:destination="@id/punchMapFragment" />
    </fragment>
    <fragment
        android:id="@+id/punchMapFragment"
        android:name="com.ma.mobileattendance.ui.fragment.PunchMapFragment"
        android:label="@string/nav_punch_title"
        tools:layout="@layout/fragment_punch_map" >
        <argument
            android:name="recordRuleId"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="rCategory"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/noticeListFragment"
        android:name="com.ma.mobileattendance.ui.notice.NoticeListFragment"
        android:label="公告列表"
        tools:layout="@layout/fragment_notice_list"/>
    <fragment
        android:id="@+id/addAffairFragment"
        android:name="com.ma.mobileattendance.ui.affair.AddAffairFragment"
        android:label="申请事务"
        tools:layout="@layout/fragment_add_affair" />
    <fragment
        android:id="@+id/workOutsidePunchFragment"
        android:name="com.ma.mobileattendance.ui.affair.workoutside.WorkOutsidePunchFragment"
        android:label="外派列表"
        tools:layout="@layout/fragment_work_outside_punch" />

</navigation>